Fix versions panel formatting.
- The version number and repository name no longer overlap on some
  screen sizes.
- The heading of the panel is the same size as other panels'.

--- a/pts/core/static/css/style.css
+++ b/pts/core/static/css/style.css
@@ -125,6 +125,9 @@
   min-width: 27%;
   float: left;
 }
+.list-group-item > .list-item-key.versions-repository {
+  min-width: 40%;
+}
 .list-group-item > .list-item-value {
   float: left;
 }
